# arcgis2geojson

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  LICENCE  Makefile  README.md  arcgis2geojson.py  build.sh  pyproject.toml  release.sh  run_tests.py  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
arcgis2geojson/: __init__.py  __version__.py
