[tool.poetry]
name = "arcgis2geojson"
version = "3.0.3"
description = "A Python library for converting ArcGIS JSON to GeoJSON"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/arcgis2geojson"
homepage = "https://github.com/chris48s/arcgis2geojson"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
coverage = "^7.2"
isort = "^5.11"
flake8 = { version = "^7.1.0", python = "^3.8.1" }
black = "==23.3.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
arcgis2geojson = 'arcgis2geojson:main'
