[project]
name = "arcgis2geojson"
version = "3.1.1"
description = "A Python library for converting ArcGIS JSON to GeoJSON"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10"
isort = "^7.0"
flake8 = "^7.3.0"
black = "==25.9.0"

[project.urls]
Home = "https://github.com/chris48s/arcgis2geojson"
Source = "https://github.com/chris48s/arcgis2geojson"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
arcgis2geojson = 'arcgis2geojson:main'
